# glim

./: .clang-format  Cargo.toml  LICENSE.md  README.md  TODO.md  build.bat  build.sh  copydll.bat  copyso.sh
.github/workflows/: build.yml  release.yml
glim/: Cargo.toml
glim/src/: background.rs  bindings.rs  buffer.rs  bvh.rs  compute_shader.rs  lib.rs  lights.rs  mesh.rs  pack.rs  seams.rs  sh.rs  shader_bindings.rs  skybox.rs  test.rs  texture2d.rs  texture_array.rs  vulkan_context.rs  window.rs
license/: README.md  readme.txt
meshes/: export.py  flower.glb  monkey.glb  noisy.glb  packuv.glb  plane.glb  random.glb
shaders/: Cargo.toml  build.rs
shaders/shaders/: adjust_samples.slang  bake.slang  bake_bounce.slang  bake_direct.slang  bake_indirect.slang  bake_lights.slang  bake_sh.slang  compact_visibility.slang  compaction_mask.slang  decompact.slang  dilate.slang  init_from_bake.slang  (+5 more)
src/: lib.rs  main.rs  tests.rs  vulkan_cmd.rs  vulkan_core.rs
stilb/: Cargo.toml
stilb/src/: bindings.rs  bmp.rs  buffer.rs  camera.rs  compute_shader.rs  graphics_shader.rs  lib.rs  lights.rs  mesh.rs  oidn.rs  pack.rs  seams.rs  sh.rs  shader.rs  shader_bindings.rs  sobol.rs  test.rs  tests.rs  texture2d.rs  vulkan_cmd.rs  vulkan_context.rs  vulkan_core.rs  vulkan_swapchain.rs  window.rs
stilb/src/math/: mod.rs  vector2.rs  vector3.rs
stilb/src/shaders/: bake_direct.rs  compact_visibility.rs  compaction_mask.rs  decompact.rs  dilate.rs  mod.rs
textures/: emission.tga  emission_cute.tga  emission_cute_wall_only.tga  flower.tga  noisy.tga
unity/: package.json
(+45 files in other folders)
