[package]
name = "stilb_rs"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
ash = { version = "0.38", default-features = false, features = ["linked", "std", "debug"] }
# ash-window = "0.13"
glfw-sys = { version = "8", default-features = false, features = ["prebuilt-libs"] }
shaders = { path = "../shaders" }
