[package]
name = "stilb"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
ash = { version = "0.38", default-features = false, features = ["linked", "std", "debug"] }
# ash-window = "0.13"
glfw-sys = { version = "8", default-features = false, features = ["prebuilt-libs", "native-handles"] }
image = "0.25.10"
libloading = "0.9.0"
shaders = { path = "../shaders" }
