[package]
name = "stilb"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
shaders = { path = "../shaders" }
ash = { version = "0.38", default-features = false, features = ["loaded", "std", "debug"] }
glfw-sys = { version = "8", default-features = false, features = ["src-build", "prebuilt-libs", "native-handles", "x11", "wayland"] }
libloading = "0.9.0"
rayon = { version = "1.12", default-features = false }

[dev-dependencies]
image = "0.25.10"
gltf = { version = "1.4.1", default-features = false, features = ["import", "utils"] }

[build-dependencies]
cc = "1.2.62"
